--- a/translations/nn/shaman_nn.po
+++ b/translations/nn/shaman_nn.po
@@ -3,17 +3,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-11-24 22:17+0200\n"
+"POT-Creation-Date: 2009-03-28 15:54+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Translate Toolkit 1.1.1\n"
+"X-Generator: Translate Toolkit 1.3.0\n"
 
 #: BuildingDialog#1
 #, fuzzy
+msgctxt "BuildingDialog#1"
 msgid "Error"
 msgstr ""
 "\n"
@@ -35,15 +36,15 @@ msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: BuildingDialog#4
-#, fuzzy
 msgid "Updating ABS Tree..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: BuildingDialog#5
-#, fuzzy
 msgid "<b>Starting ABS Tree Update...</b><br><br>"
 msgstr ""
 "\n"
@@ -128,6 +129,7 @@ msgstr ""
 
 #: BuildingHandler#1
 #, fuzzy
+msgctxt "BuildingHandler#1"
 msgid "Error"
 msgstr ""
 "\n"
@@ -176,6 +178,7 @@ msgstr ""
 
 #: BuildingHandler#6
 #, fuzzy
+msgctxt "BuildingHandler#6"
 msgid "To be Installed"
 msgstr ""
 "\n"
@@ -183,6 +186,7 @@ msgstr ""
 
 #: BuildingHandler#7
 #, fuzzy
+msgctxt "BuildingHandler#7"
 msgid "To be Upgraded"
 msgstr ""
 "\n"
@@ -213,6 +217,7 @@ msgstr ""
 
 #: BuildingHandler#11
 #, fuzzy
+msgctxt "BuildingHandler#11"
 msgid "Close"
 msgstr ""
 "\n"
@@ -272,6 +277,7 @@ msgstr ""
 
 #: ConfigDialog#2
 #, fuzzy
+msgctxt "ConfigDialog#2"
 msgid "Clean Unused Databases"
 msgstr ""
 "\n"
@@ -279,6 +285,7 @@ msgstr ""
 
 #: ConfigDialog#3
 #, fuzzy
+msgctxt "ConfigDialog#3"
 msgid "Clean Cache"
 msgstr ""
 "\n"
@@ -286,6 +293,7 @@ msgstr ""
 
 #: ConfigDialog#4
 #, fuzzy
+msgctxt "ConfigDialog#4"
 msgid "Empty Cache"
 msgstr ""
 "\n"
@@ -293,6 +301,7 @@ msgstr ""
 
 #: ConfigDialog#5
 #, fuzzy
+msgctxt "ConfigDialog#5"
 msgid "Optimize Pacman Database"
 msgstr ""
 "\n"
@@ -300,6 +309,7 @@ msgstr ""
 
 #: ConfigDialog#6
 #, fuzzy
+msgctxt "ConfigDialog#6"
 msgid "Clean All Building Environments"
 msgstr ""
 "\n"
@@ -307,6 +317,7 @@ msgstr ""
 
 #: ConfigDialog#7
 #, fuzzy
+msgctxt "ConfigDialog#7"
 msgid "Repositories"
 msgstr ""
 "\n"
@@ -349,6 +360,7 @@ msgstr ""
 
 #: ConfigDialog#13
 #, fuzzy
+msgctxt "ConfigDialog#13"
 msgid "Ok"
 msgstr ""
 "\n"
@@ -356,6 +368,7 @@ msgstr ""
 
 #: ConfigDialog#14
 #, fuzzy
+msgctxt "ConfigDialog#14"
 msgid "Cancel"
 msgstr ""
 "\n"
@@ -363,6 +376,7 @@ msgstr ""
 
 #: ConfigDialog#15
 #, fuzzy
+msgctxt "ConfigDialog#15"
 msgid "Cleaning up unused Databases..."
 msgstr ""
 "\n"
@@ -370,6 +384,7 @@ msgstr ""
 
 #: ConfigDialog#16
 #, fuzzy
+msgctxt "ConfigDialog#16"
 msgid "Cleaning up Cache..."
 msgstr ""
 "\n"
@@ -377,13 +392,15 @@ msgstr ""
 
 #: ConfigDialog#17
 #, fuzzy
+msgctxt "ConfigDialog#17"
 msgid "Deleting Cache..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: ConfigDialog#18
-#, fuzzy
+msgctxt "ConfigDialog#18"
 msgid "Optimizing Pacman Database..."
 msgstr ""
 "\n"
@@ -391,6 +408,7 @@ msgstr ""
 
 #: ConfigDialog#19
 #, fuzzy
+msgctxt "ConfigDialog#19"
 msgid "Cleaning up building Environments..."
 msgstr ""
 "\n"
@@ -398,6 +416,7 @@ msgstr ""
 
 #: ConfigDialog#20
 #, fuzzy
+msgctxt "ConfigDialog#20"
 msgid "Cleaning up Unused Databases Failed!"
 msgstr ""
 "\n"
@@ -405,6 +424,7 @@ msgstr ""
 
 #: ConfigDialog#21
 #, fuzzy
+msgctxt "ConfigDialog#21"
 msgid "Cleaning up Cache Failed!"
 msgstr ""
 "\n"
@@ -412,6 +432,7 @@ msgstr ""
 
 #: ConfigDialog#22
 #, fuzzy
+msgctxt "ConfigDialog#22"
 msgid "Deleting Cache Failed!"
 msgstr ""
 "\n"
@@ -419,6 +440,7 @@ msgstr ""
 
 #: ConfigDialog#23
 #, fuzzy
+msgctxt "ConfigDialog#23"
 msgid "Could not clean Build Environments!!"
 msgstr ""
 "\n"
@@ -426,6 +448,7 @@ msgstr ""
 
 #: ConfigDialog#24
 #, fuzzy
+msgctxt "ConfigDialog#24"
 msgid "Unused Databases Cleaned up successfully!"
 msgstr ""
 "\n"
@@ -433,6 +456,7 @@ msgstr ""
 
 #: ConfigDialog#25
 #, fuzzy
+msgctxt "ConfigDialog#25"
 msgid "Cache Cleaned Up Successfully!"
 msgstr ""
 "\n"
@@ -440,6 +464,7 @@ msgstr ""
 
 #: ConfigDialog#26
 #, fuzzy
+msgctxt "ConfigDialog#26"
 msgid "Cache Successfully Deleted!"
 msgstr ""
 "\n"
@@ -447,6 +472,7 @@ msgstr ""
 
 #: ConfigDialog#27
 #, fuzzy
+msgctxt "ConfigDialog#27"
 msgid "Build Environments Successfully Cleaned!"
 msgstr ""
 "\n"
@@ -541,6 +567,7 @@ msgstr ""
 
 #: ConfigDialog#38
 #, fuzzy
+msgctxt "ConfigDialog#38"
 msgid "Pacman Database Optimized Successfully!"
 msgstr ""
 "\n"
@@ -548,6 +575,7 @@ msgstr ""
 
 #: ConfigDialog#39
 #, fuzzy
+msgctxt "ConfigDialog#39"
 msgid "Could not Optimize Pacman Database!"
 msgstr ""
 "\n"
@@ -556,37 +584,42 @@ msgstr ""
 # sync is a command, so it should not be translated
 #: ConfigDialog#40
 #, fuzzy
+msgctxt "ConfigDialog#40"
 msgid "Running sync..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: ConfigDialog#41
-#, fuzzy
+msgctxt "ConfigDialog#41"
 msgid "Operation Completed Successfully!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: ConfigDialog#42
-#, fuzzy
+msgctxt "ConfigDialog#42"
 msgid "Sync was successfully executed!!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: ConfigDialog#43
-#, fuzzy
+msgctxt "ConfigDialog#43"
 msgid "Sync could not be executed!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: ConfigDialog#44
-#, fuzzy
+msgctxt "ConfigDialog#44"
 msgid "Sync could not be executed!!"
 msgstr ""
 "\n"
@@ -951,6 +984,7 @@ msgstr ""
 
 #: ConfigDialog#92
 #, fuzzy
+msgctxt "ConfigDialog#92"
 msgid "Repository"
 msgstr ""
 "\n"
@@ -1295,6 +1329,7 @@ msgstr ""
 
 #: LocalPackage#4
 #, fuzzy
+msgctxt "LocalPackage#4"
 msgid "More Details..."
 msgstr ""
 "\n"
@@ -1302,6 +1337,7 @@ msgstr ""
 
 #: LocalPackage#5
 #, fuzzy
+msgctxt "LocalPackage#5"
 msgid "Cancel"
 msgstr ""
 "\n"
@@ -1393,6 +1429,7 @@ msgstr ""
 
 #: MainWindow#7
 #, fuzzy
+msgctxt "MainWindow#7"
 msgid "Repositories"
 msgstr ""
 "\n"
@@ -1470,6 +1507,7 @@ msgstr ""
 
 #: MainWindow#18
 #, fuzzy
+msgctxt "MainWindow#18"
 msgid "Install"
 msgstr ""
 "\n"
@@ -1477,6 +1515,7 @@ msgstr ""
 
 #: MainWindow#19
 #, fuzzy
+msgctxt "MainWindow#19"
 msgid "Uninstall"
 msgstr ""
 "\n"
@@ -1484,6 +1523,7 @@ msgstr ""
 
 #: MainWindow#20
 #, fuzzy
+msgctxt "MainWindow#20"
 msgid "Complete Uninstall"
 msgstr ""
 "\n"
@@ -1533,6 +1573,7 @@ msgstr ""
 
 #: MainWindow#27
 #, fuzzy
+msgctxt "MainWindow#27"
 msgid "Error"
 msgstr ""
 "\n"
@@ -1550,6 +1591,7 @@ msgstr ""
 
 #: MainWindow#29
 #, fuzzy
+msgctxt "MainWindow#29"
 msgid "Database Update"
 msgstr ""
 "\n"
@@ -1626,6 +1668,7 @@ msgstr ""
 
 #: MainWindow#39
 #, fuzzy
+msgctxt "MainWindow#39"
 msgid "Package Information"
 msgstr ""
 "\n"
@@ -1661,6 +1704,7 @@ msgstr ""
 
 #: MainWindow#44
 #, fuzzy
+msgctxt "MainWindow#44"
 msgid "Shaman"
 msgstr ""
 "\n"
@@ -1677,6 +1721,7 @@ msgstr ""
 
 #: MainWindow#46
 #, fuzzy
+msgctxt "MainWindow#46"
 msgid "System Upgrade"
 msgstr ""
 "\n"
@@ -1707,6 +1752,7 @@ msgstr ""
 
 #: MainWindow#50
 #, fuzzy
+msgctxt "MainWindow#50"
 msgid "Upgrade"
 msgstr ""
 "\n"
@@ -1714,6 +1760,7 @@ msgstr ""
 
 #: MainWindow#51
 #, fuzzy
+msgctxt "MainWindow#51"
 msgid "Queue Processing"
 msgstr ""
 "\n"
@@ -1880,6 +1927,7 @@ msgstr ""
 
 #: MainWindow#70
 #, fuzzy
+msgctxt "MainWindow#70"
 msgid "Repository"
 msgstr ""
 "\n"
@@ -1964,6 +2012,7 @@ msgstr ""
 
 #: MainWindow#82
 #, fuzzy
+msgctxt "MainWindow#82"
 msgid "1"
 msgstr ""
 "\n"
@@ -2032,8 +2081,9 @@ msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: MainWindow#92
-#, fuzzy
+msgctxt "MainWindow#92"
 msgid "Update Database"
 msgstr ""
 "\n"
@@ -2041,6 +2091,7 @@ msgstr ""
 
 #: MainWindow#93
 #, fuzzy
+msgctxt "MainWindow#93"
 msgid "Upgrade System"
 msgstr ""
 "\n"
@@ -2070,13 +2121,15 @@ msgstr ""
 # Quit the application
 #: MainWindow#97
 #, fuzzy
+msgctxt "MainWindow#97"
 msgid "Quit"
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: MainWindow#98
-#, fuzzy
+msgctxt "MainWindow#98"
 msgid "Process Queue"
 msgstr ""
 "\n"
@@ -2112,6 +2165,7 @@ msgstr ""
 
 #: MaintenanceBar#3
 #, fuzzy
+msgctxt "MaintenanceBar#3"
 msgid "Clean Unused Databases"
 msgstr ""
 "\n"
@@ -2119,6 +2173,7 @@ msgstr ""
 
 #: MaintenanceBar#4
 #, fuzzy
+msgctxt "MaintenanceBar#4"
 msgid "Clean Cache"
 msgstr ""
 "\n"
@@ -2126,6 +2181,7 @@ msgstr ""
 
 #: MaintenanceBar#5
 #, fuzzy
+msgctxt "MaintenanceBar#5"
 msgid "Empty Cache"
 msgstr ""
 "\n"
@@ -2133,6 +2189,7 @@ msgstr ""
 
 #: MaintenanceBar#6
 #, fuzzy
+msgctxt "MaintenanceBar#6"
 msgid "Optimize Pacman Database"
 msgstr ""
 "\n"
@@ -2140,6 +2197,7 @@ msgstr ""
 
 #: MaintenanceBar#7
 #, fuzzy
+msgctxt "MaintenanceBar#7"
 msgid "Clean All Building Environments"
 msgstr ""
 "\n"
@@ -2147,6 +2205,7 @@ msgstr ""
 
 #: MaintenanceBar#8
 #, fuzzy
+msgctxt "MaintenanceBar#8"
 msgid "Cleaning up unused Databases..."
 msgstr ""
 "\n"
@@ -2154,6 +2213,7 @@ msgstr ""
 
 #: MaintenanceBar#9
 #, fuzzy
+msgctxt "MaintenanceBar#9"
 msgid "Cleaning up Cache..."
 msgstr ""
 "\n"
@@ -2161,13 +2221,15 @@ msgstr ""
 
 #: MaintenanceBar#10
 #, fuzzy
+msgctxt "MaintenanceBar#10"
 msgid "Deleting Cache..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: MaintenanceBar#11
-#, fuzzy
+msgctxt "MaintenanceBar#11"
 msgid "Optimizing Pacman Database..."
 msgstr ""
 "\n"
@@ -2175,6 +2237,7 @@ msgstr ""
 
 #: MaintenanceBar#12
 #, fuzzy
+msgctxt "MaintenanceBar#12"
 msgid "Cleaning up building Environments..."
 msgstr ""
 "\n"
@@ -2182,6 +2245,7 @@ msgstr ""
 
 #: MaintenanceBar#13
 #, fuzzy
+msgctxt "MaintenanceBar#13"
 msgid "Abort"
 msgstr ""
 "\n"
@@ -2196,6 +2260,7 @@ msgstr ""
 
 #: MaintenanceBar#15
 #, fuzzy
+msgctxt "MaintenanceBar#15"
 msgid "Unused Databases Cleaned up successfully!"
 msgstr ""
 "\n"
@@ -2203,6 +2268,7 @@ msgstr ""
 
 #: MaintenanceBar#16
 #, fuzzy
+msgctxt "MaintenanceBar#16"
 msgid "Cache Cleaned Up Successfully!"
 msgstr ""
 "\n"
@@ -2210,6 +2276,7 @@ msgstr ""
 
 #: MaintenanceBar#17
 #, fuzzy
+msgctxt "MaintenanceBar#17"
 msgid "Cache Successfully Deleted!"
 msgstr ""
 "\n"
@@ -2217,6 +2284,7 @@ msgstr ""
 
 #: MaintenanceBar#18
 #, fuzzy
+msgctxt "MaintenanceBar#18"
 msgid "Build Environments Successfully Cleaned!"
 msgstr ""
 "\n"
@@ -2224,6 +2292,7 @@ msgstr ""
 
 #: MaintenanceBar#19
 #, fuzzy
+msgctxt "MaintenanceBar#19"
 msgid "Close"
 msgstr ""
 "\n"
@@ -2231,6 +2300,7 @@ msgstr ""
 
 #: MaintenanceBar#20
 #, fuzzy
+msgctxt "MaintenanceBar#20"
 msgid "Cleaning up Unused Databases Failed!"
 msgstr ""
 "\n"
@@ -2238,6 +2308,7 @@ msgstr ""
 
 #: MaintenanceBar#21
 #, fuzzy
+msgctxt "MaintenanceBar#21"
 msgid "Cleaning up Cache Failed!"
 msgstr ""
 "\n"
@@ -2245,6 +2316,7 @@ msgstr ""
 
 #: MaintenanceBar#22
 #, fuzzy
+msgctxt "MaintenanceBar#22"
 msgid "Deleting Cache Failed!"
 msgstr ""
 "\n"
@@ -2252,6 +2324,7 @@ msgstr ""
 
 #: MaintenanceBar#23
 #, fuzzy
+msgctxt "MaintenanceBar#23"
 msgid "Could not clean Build Environments!!"
 msgstr ""
 "\n"
@@ -2259,6 +2332,7 @@ msgstr ""
 
 #: MaintenanceBar#24
 #, fuzzy
+msgctxt "MaintenanceBar#24"
 msgid "Pacman Database Optimized Successfully!"
 msgstr ""
 "\n"
@@ -2266,45 +2340,51 @@ msgstr ""
 
 #: MaintenanceBar#25
 #, fuzzy
+msgctxt "MaintenanceBar#25"
 msgid "Could not Optimize Pacman Database!"
 msgstr ""
 "\n"
 "            "
 
 # sync is a command, so it should not be translated
+#. (obsolete)
 #: MaintenanceBar#26
-#, fuzzy
+msgctxt "MaintenanceBar#26"
 msgid "Running sync..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: MaintenanceBar#27
-#, fuzzy
+msgctxt "MaintenanceBar#27"
 msgid "Operation Completed Successfully!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: MaintenanceBar#28
-#, fuzzy
+msgctxt "MaintenanceBar#28"
 msgid "Sync was successfully executed!!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: MaintenanceBar#29
-#, fuzzy
+msgctxt "MaintenanceBar#29"
 msgid "Sync could not be executed!"
 msgstr ""
 "\n"
 "            "
 
 # Sync is always the command
+#. (obsolete)
 #: MaintenanceBar#30
-#, fuzzy
+msgctxt "MaintenanceBar#30"
 msgid "Sync could not be executed!!"
 msgstr ""
 "\n"
@@ -2319,6 +2399,7 @@ msgstr ""
 
 #: NewsViewer#2
 #, fuzzy
+msgctxt "NewsViewer#2"
 msgid "Mark as Read"
 msgstr ""
 "\n"
@@ -2333,6 +2414,7 @@ msgstr ""
 
 #: NewsViewer#4
 #, fuzzy
+msgctxt "NewsViewer#4"
 msgid "Error"
 msgstr ""
 "\n"
@@ -2408,6 +2490,7 @@ msgstr ""
 
 #: QObject#2
 #, fuzzy
+msgctxt "QObject#2"
 msgid "Ok"
 msgstr ""
 "\n"
@@ -2450,6 +2533,7 @@ msgstr ""
 
 #: QObject#8
 #, fuzzy
+msgctxt "QObject#8"
 msgid "Shaman"
 msgstr ""
 "\n"
@@ -2464,8 +2548,8 @@ msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QObject#10
-#, fuzzy
 msgid ""
 "Shaman could not switch to root.\n"
 "Probably you have not set the SUID bit to it.\n"
@@ -2492,6 +2576,7 @@ msgstr ""
 # Thanks again, and enjoy your translation!
 #: QObject#12
 #, fuzzy
+msgctxt "QObject#12"
 msgid "Shaman"
 msgstr ""
 "\n"
@@ -2508,6 +2593,7 @@ msgstr ""
 
 #: QObject#14
 #, fuzzy
+msgctxt "QObject#14"
 msgid "Please Wait..."
 msgstr ""
 "\n"
@@ -2769,48 +2855,49 @@ msgstr ""
 
 #: QueueDialog#30
 #, fuzzy
+msgctxt "QueueDialog#30"
 msgid "Close"
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#31
-#, fuzzy
 msgid "Unexpected Error. Shaman might be corrupted."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#32
-#, fuzzy
 msgid "Executing %1 scriptlet for %2..."
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#33
-#, fuzzy
 msgid "Extracting Scriptlet from package failed!!"
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#34
-#, fuzzy
 msgid "Package %1 does not have %2 scriptlet"
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#35
-#, fuzzy
 msgid "Scriptlet processed successfully!"
 msgstr ""
 "\n"
 "            "
 
+#. (obsolete)
 #: QueueDialog#36
-#, fuzzy
 msgid "Error processing Scriptlet!!"
 msgstr ""
 "\n"
@@ -2818,6 +2905,7 @@ msgstr ""
 
 #: QueueDialog#37
 #, fuzzy
+msgctxt "QueueDialog#37"
 msgid "Queue Processing"
 msgstr ""
 "\n"
@@ -2855,6 +2943,7 @@ msgstr ""
 
 #: QueueReadyDialog#2
 #, fuzzy
+msgctxt "QueueReadyDialog#2"
 msgid "Force Queue Processing"
 msgstr ""
 "\n"
@@ -2862,6 +2951,7 @@ msgstr ""
 
 #: QueueReadyDialog#3
 #, fuzzy
+msgctxt "QueueReadyDialog#3"
 msgid "Turn off PC when Queue is done"
 msgstr ""
 "\n"
@@ -2883,6 +2973,7 @@ msgstr ""
 
 #: QueueReadyDialog#6
 #, fuzzy
+msgctxt "QueueReadyDialog#6"
 msgid "Show packages..."
 msgstr ""
 "\n"
@@ -2890,6 +2981,7 @@ msgstr ""
 
 #: QueueReadyDialog#7
 #, fuzzy
+msgctxt "QueueReadyDialog#7"
 msgid "Packages In Queue"
 msgstr ""
 "\n"
@@ -2897,6 +2989,7 @@ msgstr ""
 
 #: QueueReadyDialog#8
 #, fuzzy
+msgctxt "QueueReadyDialog#8"
 msgid "Cancel"
 msgstr ""
 "\n"
@@ -2925,6 +3018,7 @@ msgstr ""
 
 #: ReviewQueueDialog#1
 #, fuzzy
+msgctxt "ReviewQueueDialog#1"
 msgid "Install"
 msgstr ""
 "\n"
@@ -2932,6 +3026,7 @@ msgstr ""
 
 #: ReviewQueueDialog#2
 #, fuzzy
+msgctxt "ReviewQueueDialog#2"
 msgid "To be Installed"
 msgstr ""
 "\n"
@@ -2939,6 +3034,7 @@ msgstr ""
 
 #: ReviewQueueDialog#3
 #, fuzzy
+msgctxt "ReviewQueueDialog#3"
 msgid "Upgrade"
 msgstr ""
 "\n"
@@ -2946,6 +3042,7 @@ msgstr ""
 
 #: ReviewQueueDialog#4
 #, fuzzy
+msgctxt "ReviewQueueDialog#4"
 msgid "To be Upgraded"
 msgstr ""
 "\n"
@@ -2953,6 +3050,7 @@ msgstr ""
 
 #: ReviewQueueDialog#5
 #, fuzzy
+msgctxt "ReviewQueueDialog#5"
 msgid "Uninstall"
 msgstr ""
 "\n"
@@ -2967,6 +3065,7 @@ msgstr ""
 
 #: ReviewQueueDialog#7
 #, fuzzy
+msgctxt "ReviewQueueDialog#7"
 msgid "Complete Uninstall"
 msgstr ""
 "\n"
@@ -3032,6 +3131,7 @@ msgstr ""
 
 #: ShamanTrayIcon#1
 #, fuzzy
+msgctxt "ShamanTrayIcon#1"
 msgid "Update Database"
 msgstr ""
 "\n"
@@ -3039,6 +3139,7 @@ msgstr ""
 
 #: ShamanTrayIcon#2
 #, fuzzy
+msgctxt "ShamanTrayIcon#2"
 msgid "Upgrade System"
 msgstr ""
 "\n"
@@ -3046,6 +3147,7 @@ msgstr ""
 
 #: ShamanTrayIcon#3
 #, fuzzy
+msgctxt "ShamanTrayIcon#3"
 msgid "Process Queue"
 msgstr ""
 "\n"
@@ -3060,6 +3162,7 @@ msgstr ""
 
 #: ShamanTrayIcon#5
 #, fuzzy
+msgctxt "ShamanTrayIcon#5"
 msgid "Quit"
 msgstr ""
 "\n"
@@ -3088,6 +3191,7 @@ msgstr ""
 
 #: ShamanTrayIcon#9
 #, fuzzy
+msgctxt "ShamanTrayIcon#9"
 msgid "System Upgrade"
 msgstr ""
 "\n"
@@ -3147,6 +3251,7 @@ msgstr ""
 
 #: SysUpgradeDialog#2
 #, fuzzy
+msgctxt "SysUpgradeDialog#2"
 msgid "To be Upgraded"
 msgstr ""
 "\n"
@@ -3429,6 +3534,7 @@ msgstr ""
 
 #: authDialog#4
 #, fuzzy
+msgctxt "authDialog#4"
 msgid "Ok"
 msgstr ""
 "\n"
@@ -3443,6 +3549,7 @@ msgstr ""
 
 #: authDialog#6
 #, fuzzy
+msgctxt "authDialog#6"
 msgid "Cancel"
 msgstr ""
 "\n"
@@ -3478,6 +3585,7 @@ msgstr ""
 
 #: buildingDialog#3
 #, fuzzy
+msgctxt "buildingDialog#3"
 msgid "Abort"
 msgstr ""
 "\n"
@@ -3492,6 +3600,7 @@ msgstr ""
 
 #: dbUpdateDialog#1
 #, fuzzy
+msgctxt "dbUpdateDialog#1"
 msgid "Database Update"
 msgstr ""
 "\n"
@@ -3541,6 +3650,7 @@ msgstr ""
 
 #: editPBDialog#6
 #, fuzzy
+msgctxt "editPBDialog#6"
 msgid "Ok"
 msgstr ""
 "\n"
@@ -3621,6 +3731,7 @@ msgstr ""
 # close the dialog
 #: logViewer#8
 #, fuzzy
+msgctxt "logViewer#8"
 msgid "Close"
 msgstr ""
 "\n"
@@ -3656,6 +3767,7 @@ msgstr ""
 
 #: newsDialog#5
 #, fuzzy
+msgctxt "newsDialog#5"
 msgid "Mark as Read"
 msgstr ""
 "\n"
@@ -3678,6 +3790,7 @@ msgstr ""
 # close the dialog
 #: newsDialog#8
 #, fuzzy
+msgctxt "newsDialog#8"
 msgid "Close"
 msgstr ""
 "\n"
@@ -3701,6 +3814,7 @@ msgstr ""
 
 #: pkgProperties#2
 #, fuzzy
+msgctxt "pkgProperties#2"
 msgid "Package Information"
 msgstr ""
 "\n"
@@ -3792,6 +3906,7 @@ msgstr ""
 
 #: pkgProperties#15
 #, fuzzy
+msgctxt "pkgProperties#15"
 msgid "1"
 msgstr ""
 "\n"
@@ -3827,6 +3942,7 @@ msgstr ""
 
 #: pkgProperties#20
 #, fuzzy
+msgctxt "pkgProperties#20"
 msgid "Ok"
 msgstr ""
 "\n"
@@ -3877,6 +3993,7 @@ msgstr ""
 
 #: reviewBuildingDialog#6
 #, fuzzy
+msgctxt "reviewBuildingDialog#6"
 msgid "Turn off PC when Queue is done"
 msgstr ""
 "\n"
@@ -3884,6 +4001,7 @@ msgstr ""
 
 #: reviewBuildingDialog#7
 #, fuzzy
+msgctxt "reviewBuildingDialog#7"
 msgid "Show packages..."
 msgstr ""
 "\n"
@@ -3891,6 +4009,7 @@ msgstr ""
 
 #: reviewBuildingDialog#8
 #, fuzzy
+msgctxt "reviewBuildingDialog#8"
 msgid "Packages In Queue"
 msgstr ""
 "\n"
@@ -3898,6 +4017,7 @@ msgstr ""
 
 #: reviewBuildingDialog#9
 #, fuzzy
+msgctxt "reviewBuildingDialog#9"
 msgid "Abort"
 msgstr ""
 "\n"
@@ -3961,6 +4081,7 @@ msgstr ""
 
 #: transactionDialog#6
 #, fuzzy
+msgctxt "transactionDialog#6"
 msgid "More Details..."
 msgstr ""
 "\n"
@@ -3968,6 +4089,7 @@ msgstr ""
 
 #: transactionDialog#7
 #, fuzzy
+msgctxt "transactionDialog#7"
 msgid "Abort"
 msgstr ""
 "\n"
@@ -3975,6 +4097,7 @@ msgstr ""
 
 #: transactionDialog#8
 #, fuzzy
+msgctxt "transactionDialog#8"
 msgid "Please Wait..."
 msgstr ""
 "\n"
@@ -3996,6 +4119,7 @@ msgstr ""
 
 #: upgradeDialog#1
 #, fuzzy
+msgctxt "upgradeDialog#1"
 msgid "System Upgrade"
 msgstr ""
 "\n"
@@ -4003,6 +4127,7 @@ msgstr ""
 
 #: upgradeDialog#2
 #, fuzzy
+msgctxt "upgradeDialog#2"
 msgid "Force Queue Processing"
 msgstr ""
 "\n"
@@ -4017,6 +4142,7 @@ msgstr ""
 
 #: upgradeDialog#4
 #, fuzzy
+msgctxt "upgradeDialog#4"
 msgid "Abort"
 msgstr ""
 "\n"
@@ -4024,6 +4150,7 @@ msgstr ""
 
 #: upgradeDialog#5
 #, fuzzy
+msgctxt "upgradeDialog#5"
 msgid "Show packages..."
 msgstr ""
 "\n"
